--- a/.github/workflows/build-and-push-docker.yml
+++ b/.github/workflows/build-and-push-docker.yml
@@ -39,7 +39,7 @@ jobs:
       # Step 5: Build ThingsBoard
       - name: Build ThingsBoard
         run: |
-          ./mvnw clean install -DskipTests || mvn clean install -DskipTests
+          ./mvnw clean install -DskipTests -Dlicense.skip=true || mvn clean install -DskipTests -Dlicense.skip=true
 
       # Step 6: Log in to GitHub Container Registry
       - name: Log in to GitHub Container Registry
