--- a/.github/workflows/build-and-push-docker.yml
+++ b/.github/workflows/build-and-push-docker.yml
@@ -40,7 +40,11 @@ jobs:
       - name: Build ThingsBoard
         run: |
           ./mvnw clean install -DskipTests -Dlicense.skip=true || mvn clean install -DskipTests -Dlicense.skip=true
-
+      
+      # Step 5.5: Search for Dockerfile
+      - name: Search for Dockerfile
+        run: find . -name "Dockerfile"
+      
       # Step 6: Log in to GitHub Container Registry
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v2
