--- a/.github/workflows/build-and-push-docker.yml
+++ b/.github/workflows/build-and-push-docker.yml
@@ -39,7 +39,7 @@ jobs:
       # Step 5: Build ThingsBoard
       - name: Build ThingsBoard
         run: |
-          ./mvnw clean install -DskipTests -Dlicense.skip=false || mvn clean install -DskipTests -Dlicense.skip=false
+          ./mvnw clean install -DskipTests -Dlicense.skip=true -Ddockerfile.skip=false || mvn clean install -DskipTests -Dlicense.skip=true -Ddockerfile.skip=false
       
       # Step 6: Log in to GitHub Container Registry
       - name: Log in to GitHub Container Registry
