--- a/.github/workflows/build-and-push-docker.yml
+++ b/.github/workflows/build-and-push-docker.yml
@@ -41,7 +41,11 @@ jobs:
         run: |
           ./mvnw clean install -DskipTests -Dlicense.skip=true -Ddockerfile.skip=false || mvn clean install -DskipTests -Dlicense.skip=true -Ddockerfile.skip=false
       
-      # Step 6: Log in to GitHub Container Registry
+      # Step 6: Set up Docker Buildx for multi-architecture builds
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      # Step 7: Log in to GitHub Container Registry
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v2
         with:
@@ -49,8 +53,13 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GHCR_PAT }}
 
-      # Step 8: Push Docker image to GitHub Container Registry
-      - name: Push Docker image
-        run: |
-          docker tag thingsboard/tb-postgres:latest ghcr.io/${{ github.repository_owner }}/tb-postgres:latest
-          docker push ghcr.io/${{ github.repository_owner }}/tb-postgres:latest
+      # Step 8: Build and push multi-architecture Docker image
+      - name: Build and push
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          file: ./docker/tb-postgres.dockerfile
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: |
+            ghcr.io/${{ github.repository_owner }}/tb-postgres:latest
