trigger on branding push

--- a/.github/workflows/build-and-push-docker.yml
+++ b/.github/workflows/build-and-push-docker.yml
@@ -3,7 +3,8 @@ name: Build, Create Docker Image, and Push to GitHub Container Registry
 on:
   push:
     branches:
-      - develop  # Trigger on push to the `main` branch
+      - develop  # Trigger on push to the `develop` branch
+      - branding
   pull_request:
     branches:
       - develop
